--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@types/node": "^22.13.4",
-    "tailwindcss-radix-colors": "^2.0.0"
+    "tailwindcss-radix-colors": "^2.0.0",
+    "vite-plugin-solid-svg": "^0.8.1"
   }
 }
