--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "allowJs": true,
     "noEmit": true,
     "strict": true,
-    "types": ["vinxi/types/client"],
+    "types": [
+      "vinxi/types/client",
+      "vite-plugin-solid-svg/types-component-solid"
+    ],
     "isolatedModules": true,
     "paths": {
       "~/*": ["./src/*"]
