--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "example-with-tailwindcss",
   "type": "module",
   "scripts": {
+    "prepare": "panda codegen",
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start"
@@ -25,7 +26,6 @@
     "clsx": "^2.1.1",
     "ol": "^10.4.0",
     "ol-popup": "^5.1.1",
-    "postcss": "^8.5.2",
     "solid-js": "^1.9.4",
     "solid-list": "^0.3.0",
     "solid-transition-size": "^0.1.4",
@@ -43,9 +43,14 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@pandacss/dev": "^0.46.1",
+    "@park-ui/panda-preset": "0.42.0",
     "@tailwindcss/forms": "^0.5.10",
     "@types/node": "^22.13.4",
+    "postcss": "^8.5.3",
     "tailwindcss-radix-colors": "^2.0.0",
-    "vite-plugin-solid-svg": "^0.8.1"
-  }
+    "vite-plugin-solid-svg": "^0.8.1",
+    "vite-tsconfig-paths": "5.0.1"
+  },
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
