--- a/package.json
+++ b/package.json
@@ -18,22 +18,15 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.1",
-    "@tailwindcss/postcss": "^4.0.7",
-    "@tailwindcss/vite": "^4.0.7",
-    "@types/geojson": "^7946.0.16",
+
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk-solid": "^1.1.2",
     "lucide-solid": "^0.476.0",
     "ol": "^10.4.0",
-    "ol-popup": "^5.1.1",
     "postcss": "^8.5.2",
     "solid-js": "^1.9.4",
-    "solid-list": "^0.3.0",
-    "solid-transition-size": "^0.1.4",
-    "tailwind-merge": "^3.0.1",
-    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.0.7",
-    "tailwindcss-animate": "^1.0.7",
     "unique-names-generator": "^4.7.1",
     "vinxi": "^0.5.3"
   },
@@ -44,6 +37,12 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.7",
+    "@tailwindcss/vite": "^4.0.7",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "@types/geojson": "^7946.0.16",
     "@tailwindcss/forms": "^0.5.10",
     "@types/node": "^22.13.4",
     "tailwindcss-radix-colors": "^2.0.0",
